--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@contentful/f36-datetime": "^4.30.3",
+    "@contentful/rich-text-react-renderer": "^15.16.3",
+    "@contentful/rich-text-types": "^16.0.3",
     "@next/font": "13.1.0",
     "@tanstack/react-query": "^4.24.10",
     "@types/node": "18.11.17",
